--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <img src="profile-pic.png" alt="Profile Picture">
           </div>
           <div class="details">
-            <p><strong>Name:</strong> Mateu or Xbaw</p>
+            <p><strong>Name:</strong>Xbaw or Vall</p>
             <p><strong>Birthday:</strong> 1 February</p>
-            <p><strong>Hobbies:</strong> Playing Minecraft, chatting with people, riding my bike</p>
+            <p><strong>Hobbies:</strong> Playing Minecraft, chatting with people,, idk what to write more XD</p>
             <p><strong>Country:</strong> Romania</p>
-            <p><strong>Gender:</strong> Male (Hard to tell XD)</p>
-            <p><strong>Pronouns:</strong> Him</p>
+            <p><strong>Gender:</strong> Female (Hard to tell XD)</p>
+            <p><strong>Pronouns:</strong> Her</p>
           </div>
         </div>
       </div>
@@ -149,12 +149,12 @@
               <img src="profile-pic.png" alt="Profile Picture">
             </div>
             <div class="details">
-              <p><strong>Name:</strong> Mateu or Xbaw</p>
+              <p><strong>Name:</strong>Xbaw or vall</p>
               <p><strong>Birthday:</strong> 1 February</p>
-              <p><strong>Hobbies:</strong> Playing Minecraft, chatting with people, riding my bike</p>
+              <p><strong>Hobbies:</strong> Playing Minecraft, chatting with people, idk what to put more XD</p>
               <p><strong>Country:</strong> Romania</p>
-              <p><strong>Gender:</strong> Male (Hard to tell XD)</p>
-              <p><strong>Pronouns:</strong> Him</p>
+              <p><strong>Gender:</strong> Female (Hard to tell XD)</p>
+              <p><strong>Pronouns:</strong>Her</p>
             </div>
           </div>
         </div>
