--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <img src="profile-pic.png" alt="Profile Picture">
           </div>
           <div class="details">
-            <p><strong>Name:</strong>Xbaw or Vall</p>
+            <p><strong>Name:</strong>Xbaw or Mateu0k</p>
             <p><strong>Birthday:</strong> 1 February</p>
-            <p><strong>Hobbies:</strong> Playing Minecraft, chatting with people,, idk what to write more XD</p>
+            <p><strong>Hobbies:</strong> Playing Minecraft, chatting with people, idk what to write more XD</p>
             <p><strong>Country:</strong> Romania</p>
-            <p><strong>Gender:</strong> Female (Hard to tell XD)</p>
-            <p><strong>Pronouns:</strong> Her</p>
+            <p><strong>Gender:</strong> Male (Hard to tell XD)</p>
+            <p><strong>Pronouns:</strong> Him</p>
           </div>
         </div>
       </div>
@@ -85,7 +85,7 @@
     }
 
     function goToInstagram() {
-      window.location.href = "https://www.instagram.com/xbawfr/";
+      window.location.href = "https://shattereddisk.github.io/rickroll/rickroll.mp4";
     }
 
     // Draggable Window
@@ -149,12 +149,12 @@
               <img src="profile-pic.png" alt="Profile Picture">
             </div>
             <div class="details">
-              <p><strong>Name:</strong>Xbaw or vall</p>
+              <p><strong>Name:</strong>Xbaw or Mateu</p>
               <p><strong>Birthday:</strong> 1 February</p>
               <p><strong>Hobbies:</strong> Playing Minecraft, chatting with people, idk what to put more XD</p>
               <p><strong>Country:</strong> Romania</p>
-              <p><strong>Gender:</strong> Female (Hard to tell XD)</p>
-              <p><strong>Pronouns:</strong>Her</p>
+              <p><strong>Gender:</strong> Male (Hard to tell XD)</p>
+              <p><strong>Pronouns:</strong>Him</p>
             </div>
           </div>
         </div>
